@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.4 2003/09/24 09:12:20 xtraeme Exp $
+$NetBSD: distinfo,v 1.5 2004/05/28 23:00:13 xtraeme Exp $
 
-SHA1 (libesmtp-1.0.1.tar.bz2) = fcfae8ebca1030da55de3bb25de3c922f0d3adbd
-Size (libesmtp-1.0.1.tar.bz2) = 261664 bytes
+SHA1 (libesmtp-1.0.3r1.tar.bz2) = 05a11a95f6083c25d99a850dbc0d93c8301b77fd
+Size (libesmtp-1.0.3r1.tar.bz2) = 269527 bytes
 SHA1 (patch-ab) = cc027b93ae55b84c1b569ddcdd2644d4f63a33a5
 SHA1 (patch-ad) = 80446e62fef1bd6a99dec98020924fada41acffa
